--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+sidedoor (0.2.0-3) unstable; urgency=medium
+
+  * Move sudoers example to sidedoor-sudo package.
+    Thanks Andreas Beckmann. (Closes: #854720)
+
+ -- Dara Adib <daradib@ocf.berkeley.edu>  Thu, 09 Feb 2017 15:37:43 -0500
+
 sidedoor (0.2.0-2) unstable; urgency=medium
 
   * Fixes to sidedoor-sudo.
