--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ sidedoor (0.2.1-2) UNRELEASED; urgency=medium
 
   * Add missing build dependency on dh addon.
   * Bump debhelper from deprecated 9 to 12.
+  * Set debhelper-compat version in Build-Depends.
 
  -- Debian Janitor <janitor@jelmer.uk>  Tue, 05 May 2020 23:39:26 +0000
 
