--- a/debian/changelog
+++ b/debian/changelog
@@ -1,12 +1,12 @@
 sidedoor (0.2.1-2) UNRELEASED; urgency=medium
 
-  * Add missing build dependency on dh addon.
-  * Bump debhelper from deprecated 9 to 12.
+  [ Debian Janitor ]
+  * Bump debhelper from deprecated 9 to 12. (Closes: #958629)
   * Set debhelper-compat version in Build-Depends.
   * Set upstream metadata fields: Bug-Database, Bug-Submit, Repository,
     Repository-Browse.
 
- -- Debian Janitor <janitor@jelmer.uk>  Tue, 05 May 2020 23:39:26 +0000
+ -- Dara Adib <daradib@ocf.berkeley.edu>  Sat, 18 Jul 2020 23:03:52 -0400
 
 sidedoor (0.2.1-1) unstable; urgency=medium
 
