--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ sidedoor (0.2.1-2) UNRELEASED; urgency=medium
   [ Dara Adib ]
   * debian/control:
     - Bump Standards-Version to 4.5.0.
+    - Add Rules-Requires-Root field.
 
   [ Debian Janitor ]
   * Bump debhelper from deprecated 9 to 12. (Closes: #958629)
