--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,9 @@ sidedoor (0.2.1-2) UNRELEASED; urgency=medium
   * Set debhelper-compat version in Build-Depends.
   * Set upstream metadata fields: Bug-Database, Bug-Submit, Repository,
     Repository-Browse.
+  * Remove constraints unnecessary since buster (oldstable):
+    + sidedoor: Drop versioned constraint on lsb-base (>= 3.0-6) in Depends.
+    + Remove 1 maintscript entries from 1 files.
 
  -- Dara Adib <daradib@ocf.berkeley.edu>  Sat, 18 Jul 2020 23:03:52 -0400
 
